Updated controller for puzzle page; fixed spacing on kiosk navbar

--- a/PPAttendanceSystem/PPAttendanceSystem/Content/StudentDashBoard.css
+++ b/PPAttendanceSystem/PPAttendanceSystem/Content/StudentDashBoard.css
@@ -17,6 +17,7 @@ body {
 
 .head-btn {
     margin-top: 20px;
+	margin-left: 10px;
     color: white;
 }
 
